08/ingress/home.yml
---
kind: Service
apiVersion: v1
metadata:
  name: home-service
spec: 
  # type: ClusterIP
  # clusterip: 10.233.10.10
  selector:
    name: home
  ports:
  - port: 80
    targetPort: 80
    # nodePort: 30200

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: home-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: home
  template:
    metadata:
      labels:
        name: home
    spec:
      containers:
      - image: httpd
        name: home-container
        ports:
        - containerPort: 80
